--- a/services/modules/helm-charts/charts/guardian-worker-service/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-worker-service/templates/configmap.yaml
@@ -8,6 +8,9 @@ data:
   MIN_PRIORITY: "0"
   MAX_PRIORITY: "19"
   TASK_TIMEOUT: "300"
-  REFRESH_INTERVAL: "300"
+  REFRESH_INTERVAL: "60"
   ENABLE_APM_NAME: "{{ .Values.global.guardian.enable_apm_name }}"
   NEW_RELIC_APP_NAME: "{{ include "guardian-worker-service.fullname" . }}"
+  IPFS_TIMEOUT: "720"
+  IPFS_PROVIDER: "web3storage"
+  IPFS_PUBLIC_GATEWAY: "https://ipfs.io/ipfs/${cid}"
