--- a/services/modules/helm-charts/charts/guardian-frontend/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-frontend/templates/configmap.yaml
@@ -34,7 +34,7 @@ data:
         }
 
         location / {
-            root   /usr/local/share/nginx/html;
+            root   /usr/share/nginx/html;
             try_files $uri $uri/ /index.html;
         }
 
