--- a/services/modules/helm-charts/charts/guardian-frontend/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-frontend/templates/configmap.yaml
@@ -44,6 +44,6 @@ data:
         #
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
-            root   /usr/share/nginx/html;
+            root   /usr/local/share/nginx/html;
         }
     }
