update message-broker overwritten file

--- a/services/modules/helm-charts/charts/guardian-guardian-service/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-guardian-service/templates/configmap.yaml
@@ -19,3 +19,5 @@ data:
   NODE_OPTIONS: "--max-old-space-size=8192"
   MULTI_POLICY_SCHEDULER: "0 0 * * *"
   SEND_KEYS_TO_VAULT: "TRUE"
+  CONTRACT_FILE_ID: "0.0.6276"
+  BBS_SIGNATURES_MODE: "WASM"
