--- a/services/modules/helm-charts/charts/guardian-guardian-service/templates/deployment.yaml
+++ b/services/modules/helm-charts/charts/guardian-guardian-service/templates/deployment.yaml
@@ -63,7 +63,14 @@ spec:
               readOnly: true
               mountPath: /usr/local/guardian-service/entrypoint.sh
               subPath: entrypoint.sh
-            
+            # - name: guardian-extensions-files
+            #   readOnly: true
+            #   mountPath: /usr/local/guardian-service/dist/policy-engine/policy-engine.js
+            #   subPath: policy-engine.js
+            # - name: guardian-extensions-files
+            #   readOnly: true
+            #   mountPath: /usr/local/guardian-service/dist/app.js
+            #   subPath: app.js
             {{- if eq .Values.global.guardian.enable_apm_name "newrelic" }}
             - name: guardian-extensions-files
               readOnly: true
@@ -82,6 +89,10 @@ spec:
                 path: message-broker-channel.js     
               - key: guardian-healthcheck.js
                 path: guardian-healthcheck.js
+              # - key: app.js
+              #   path: app.js
+              # - key: policy-engine.js
+              #   path: policy-engine.js
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
