--- a/services/modules/helm-charts/charts/guardian-ipfs-client/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-ipfs-client/templates/configmap.yaml
@@ -9,3 +9,4 @@ data:
   SERVICE_CHANNEL: "ipfs-client"
   ENABLE_APM_NAME: "{{ .Values.global.guardian.enable_apm_name }}"
   NEW_RELIC_APP_NAME: "{{ include "guardian-ipfs-client.fullname" . }}"
+  MQ_MESSAGE_CHUNK: "{{ .Values.global.guardian.mq_message_chunk}}"
