--- a/services/modules/helm-charts/charts/guardian-logger-service/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-logger-service/templates/configmap.yaml
@@ -9,3 +9,4 @@ data:
   SERVICE_CHANNEL: "logger-service"
   ENABLE_APM_NAME: "{{ .Values.global.guardian.enable_apm_name }}"
   NEW_RELIC_APP_NAME: "{{ include "guardian-logger-service.fullname" . }}"
+  MQ_MESSAGE_CHUNK: "{{ .Values.global.guardian.mq_message_chunk}}"
