--- a/services/modules/helm-charts/charts/guardian-policy-service/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-policy-service/templates/configmap.yaml
@@ -13,3 +13,4 @@ data:
   NEW_RELIC_APP_NAME: "{{ include "guardian-policy-service.fullname" . }}"
   NODE_OPTIONS: "--max-old-space-size=8192"
   BBS_SIGNATURES_MODE: WASM
+  MQ_MESSAGE_CHUNK: "{{ .Values.global.guardian.mq_message_chunk}}"
