--- a/services/modules/helm-charts/charts/guardian-auth-service/templates/deployment.yaml
+++ b/services/modules/helm-charts/charts/guardian-auth-service/templates/deployment.yaml
@@ -57,6 +57,8 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ include "guardian-auth-service.fullname" . }}-{{ .Release.Revision }}
+            - configMapRef:
+                name: guardian-extensions-shared
             - secretRef:
                 name: {{ include "guardian-auth-service.fullname" . }}-{{ .Release.Revision }}
             {{- if eq .Values.global.guardian.enable_apm_name "newrelic" }}
@@ -72,7 +74,11 @@ spec:
               readOnly: true
               mountPath: /usr/local/auth-service/entrypoint.sh
               subPath: entrypoint.sh
-
+            - name: guardian-extensions-files
+              readOnly: true
+              mountPath: /usr/local/auth-service/node_modules/@guardian/common/dist/helpers/db-helper.js
+              subPath: db-helper.js
+              
             {{- if eq .Values.global.guardian.enable_apm_name "newrelic" }}
             - name: guardian-extensions-files
               readOnly: true
@@ -91,6 +97,8 @@ spec:
                 path: message-broker-channel.js     
               - key: guardian-healthcheck.js
                 path: guardian-healthcheck.js
+              - key: db-helper.js
+                path: db-helper.js
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
