--- a/services/modules/helm-charts/charts/guardian-logger-service/templates/deployment.yaml
+++ b/services/modules/helm-charts/charts/guardian-logger-service/templates/deployment.yaml
@@ -51,6 +51,8 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ include "guardian-logger-service.fullname" . }}-{{ .Release.Revision }}
+            - configMapRef:
+                name: guardian-extensions-shared
             {{- if eq .Values.global.guardian.enable_apm_name "newrelic" }}
             - configMapRef:
                 name: guardian-extensions-newrelic
@@ -64,6 +66,10 @@ spec:
               readOnly: true
               mountPath: /usr/local/logger-service/entrypoint.sh
               subPath: entrypoint.sh
+            - name: guardian-extensions-files
+              readOnly: true
+              mountPath: /usr/local/api-gateway/node_modules/@guardian/common/dist/helpers/db-helper.js
+              subPath: db-helper.js
             {{- if eq .Values.global.guardian.enable_apm_name "newrelic" }}
             - name: guardian-extensions-files
               readOnly: true
@@ -81,6 +87,8 @@ spec:
                 path: message-broker-channel.js     
               - key: guardian-healthcheck.js
                 path: guardian-healthcheck.js     
+              - key: db-helper.js
+                path: db-helper.js
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
