--- a/services/modules/helm-charts/charts/guardian-extensions/templates/configmap.yaml
+++ b/services/modules/helm-charts/charts/guardian-extensions/templates/configmap.yaml
@@ -12,3 +12,17 @@ data:
   NEW_RELIC_APPLICATION_LOGGING_FORWARDING_ENABLED: "true"
   NEW_RELIC_APPLICATION_LOGGING_LOCAL_DECORATING_ENABLED: "true"
   NEW_RELIC_APPLICATION_LOGGING_METRICS_ENABLED: "true"
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ include "guardian-extensions.name" . }}-shared
+data:
+  MQ_MAX_PAYLOAD: "10485760"
+  MQ_MESSAGE_CHUNK: "{{ .Values.global.guardian.mq_message_chunk}}"
+  MESSAGE_LANG: "en-US"
+  PREUSED_HEDERA_NET: "{{ .Values.global.guardian.network}}"
+  GUARDIAN_ENV: ""
+  HEDERA_NET: "{{ .Values.global.guardian.network}}"
+  ENV: ""
